    with adt-run --output-dir, and fake backend when passing $DEBCI_FAKE_DEPS.
    This will be used to collect and present log files, artifacts,
    package/version lists, etc.
  * Eliminate list-base-system and use autopkgtest's testbed-packages output
    file instead. This will also work with remote workers and other virt
    servers.

 -- Martin Pitt <mpitt@debian.org>  Sat, 05 Apr 2014 12:18:39 +0100

debci (0.5.1) unstable; urgency=medium

  * etc/schroot/debci/fstab: improve schroot isolation
    - do not share /tmp with host
    - mount tmpfs at /dev/shm as quite some software needs it
  * test_shell_best_practices.sh: skip when checkbashisms is not available.
    - You don't want to install devscripts and all its dependencies when
      running as-installed tests
    - checking for best practices is only useful in development environments.
  * Use unified diff in "Change in the base system since last run"
  * debian/source/options: fix to include publib/data in the source tarball,
    but not data/*

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 01 Apr 2014 12:23:15 -0300

debci (0.5.0) unstable; urgency=medium

  [ Martin Pitt ]
  * Add missing dctrl-tools dependency.
  * Use "dpkg --print-architecture" instead of dpkg-architecture, to avoid a
    dependency on dpkg-dev and the (undeclared) dependency on gcc.
  * Fix grep_packages() to actually use the configured architecture instead of
    the host architecture.
  * Add --help output to debci-{list-packages,setup,test}, instead of failing
    with an "usage: not found" error.

  [ Antonio Terceiro ]
  * Initial upload to Debian (Closes: #736416)
    The API is not set yet, but I am uploading anyway to allow for early
    testing, improve contribution opportunities, to get a BTS etc.
  * Updated documentation
    - instructions for setting up a development instance.
    - Point traffic at debian-qa
  * modularize behaviour of a backend
    - existing implementation extracted as the `schroot` backend