@@ -11,6 +11,8 @@ debci (0.6) UNRELEASED; urgency=medium
   * Eliminate list-base-system and use autopkgtest's testbed-packages output
     file instead. This will also work with remote workers and other virt
     servers.
+  * Eliminate check_version() and take this information from autopkgtest's
+    output.
 
  -- Martin Pitt <mpitt@debian.org>  Sat, 05 Apr 2014 12:18:39 +0100
 
